Add notebook for hand in

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "separate-cocktail",
+   "id": "corrected-equilibrium",
    "metadata": {},
    "source": [
     "# MNIST classification"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parental-square",
+   "id": "compound-going",
    "metadata": {},
    "source": [
     "**Course:** 02506 Advanced Image Analysis Spring 21\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emerging-trail",
+   "id": "general-element",
    "metadata": {},
    "source": [
     "***"
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "expired-brand",
+   "execution_count": 1,
+   "id": "sunset-boundary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proof-event",
+   "id": "trying-saskatchewan",
    "metadata": {},
    "source": [
     "## Instructions"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applicable-album",
+   "id": "awful-australian",
    "metadata": {},
    "source": [
     "This notebook serves as a demonstration of the trained MNIST classifier. Run this notebook to get classification results on previously unseen data."
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relative-hollow",
+   "id": "creative-fluid",
    "metadata": {},
    "source": [
     "## Method"
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brutal-passport",
+   "id": "identical-edmonton",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "advisory-washington",
+   "id": "headed-simpson",
    "metadata": {},
    "source": [
     "## Code structure"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-preference",
+   "id": "peripheral-denver",
    "metadata": {},
    "source": [
     "The only used 3rd party library is NumPy."
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-october",
+   "id": "thorough-cylinder",
    "metadata": {},
    "source": [
     "## Run on new data "
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-liver",
+   "id": "ordered-support",
    "metadata": {},
    "source": [
     "### Load data and neural network model"
@@ -103,12 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "sustained-structure",
+   "execution_count": 2,
+   "id": "documented-thinking",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "read_mnist() got an unexpected keyword argument 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-359e5105f69a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mims\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_mnist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# Format X as (n_obs, n_features) and onehot encode y.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformat_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mims\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: read_mnist() got an unexpected keyword argument 'data'"
+     ]
+    }
+   ],
    "source": [
-    "ims, labels, a, t = read_mnist(data='test')\n",
+    "im_path = 'mnist/t10k-images-idx3-ubyte'\n",
+    "lab_path = 'mnist/t10k-labels-idx1-ubyte'\n",
+    "ims, labels, a, t = read_mnist()\n",
     "# Format X as (n_obs, n_features) and onehot encode y.\n",
     "X, y = format_data(ims, labels)"
    ]
@@ -116,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "coated-rotation",
+   "id": "adjusted-filling",
    "metadata": {},
    "outputs": [
     {
@@ -134,17 +148,17 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ultimate-mortality",
+   "id": "tough-capacity",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load neural network model.\n",
-    "nn = load_nn('best_nn.pkl')"
+    "nn = load_nn('models/best_nn.pkl')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "signal-search",
+   "id": "friendly-portugal",
    "metadata": {},
    "source": [
     "### Run and evaluate model on the data"
@@ -153,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "acquired-vitamin",
+   "id": "difficult-details",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "automated-hollywood",
+   "id": "southern-pillow",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blind-brain",
+   "id": "sharp-candidate",
    "metadata": {},
    "source": [
     "### Investigating the misclassifications"
@@ -190,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "aware-bidding",
+   "id": "grave-match",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "following-ultimate",
+   "id": "biological-jacob",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "geographic-vegetarian",
+   "id": "complimentary-retirement",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "possible-adult",
+   "id": "democratic-harvard",
    "metadata": {},
    "outputs": [],
    "source": []
