Update final notebook

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "average-regular",
+   "id": "imported-failing",
    "metadata": {},
    "source": [
     "# MNIST classification"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cross-intensity",
+   "id": "meaning-south",
    "metadata": {},
    "source": [
     "**Course:** 02506 Advanced Image Analysis Spring 21\n",
@@ -19,17 +19,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "tender-mailing",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "adequate-entrance",
+   "id": "deadly-vinyl",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,70 +33,134 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-snapshot",
+   "id": "clean-trinidad",
    "metadata": {},
    "source": [
-    "## Instructions"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "together-master",
+   "id": "polyphonic-provider",
    "metadata": {},
    "source": [
+    "## Explanation of project\n",
     "This notebook serves as a demonstration of the trained MNIST classifier. Run this notebook to get classification results on previously unseen data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "optical-stupid",
+   "id": "heated-posting",
    "metadata": {},
    "source": [
-    "## Method"
+    "### Code structure"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-priority",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "chronic-complement",
+   "id": "framed-injection",
    "metadata": {},
    "source": [
-    "## Code structure"
+    "The only used 3rd party libraries are NumPy and Matplotlib.\n",
+    "```\n",
+    ".\n",
+    "├── mnist                   # MNIST data.\n",
+    "├── models                  # Trained models saved as pickles.\n",
+    "├── nn.py                   # Code for Neural Network.\n",
+    "├── augmentation.py         # Code for augmenting the MNIST dataset.\n",
+    "├── helpers.py              # Helper functions for data handling.\n",
+    "├── demonstration.ipynb     # Notebook for hand in and evaluation on test set.\n",
+    "├── .gitignore\n",
+    "└── README.md\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "single-invite",
+   "id": "worth-isaac",
    "metadata": {},
    "source": [
-    "The only used 3rd party library is NumPy."
+    "### Pre-processing"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-deadline",
+   "id": "cheap-traffic",
    "metadata": {},
    "source": [
-    "## Run on new data "
+    "We use data augmentation in order to expand the training set and add diversity. We expect that this will increase the model's ability to generalize. \n",
+    "\n",
+    "For data augmentation we use\n",
+    "- Additive noise.\n",
+    "- Rotation.\n",
+    "- Mirroring (only of 0 and 8).\n",
+    "- Elastic deformation."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "printable-regard",
+   "id": "suited-rating",
+   "metadata": {},
+   "source": [
+    "### Model selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pleasant-postage",
+   "metadata": {},
+   "source": [
+    "The data set is split into a training set of 48000 images and a validation set of 12000 images. The best model is selected as the model performing best on the test set.\n",
+    "\n",
+    "All models are trained using 200 epochs and a batch size of 200."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "early-flooring",
+   "metadata": {},
+   "source": [
+    "| Architecture | Hyper params | Augmentation | Validation set accuracy |\n",
+    "| :--- | :--- | :--- | ---: |\n",
+    "| MLP [784, 400, 200, 10] | [$\\eta$=0.001, $\\gamma$=0.9]  | No | .971 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "appropriate-reynolds",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "looking-testing",
+   "metadata": {},
+   "source": [
+    "## Evaluating on unseen data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bottom-science",
    "metadata": {},
    "source": [
     "### Load data and neural network model"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "elder-notion",
+   "metadata": {},
+   "source": [
+    "Specify paths to the data below. By default these are set to the 10k test images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "national-script",
+   "id": "incomplete-estonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "durable-brooks",
+   "id": "lyric-resource",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "electoral-medication",
+   "id": "opposed-house",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,34 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "oriental-going",
+   "execution_count": null,
+   "id": "eight-currency",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The neural network has 4 layers.\n",
-      "Layer 0 has 784 units.\n",
-      "Layer 1 has 400 units.\n",
-      "Layer 2 has 200 units.\n",
-      "Layer 3 has 10 units.\n",
-      "The learning rate of the network during training is 0.001.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NeuralNetwork' object has no attribute 'momentum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-4bdd7709caef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Layer {i} has {num_units} units.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"The learning rate of the network during training is {nn.lr}.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmomentum\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"The neural network used momentum of {nn.momentum} during training.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NeuralNetwork' object has no attribute 'momentum'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"The neural network has {nn.num_layers} layers.\")\n",
     "for i, num_units in enumerate(nn.layers):\n",
@@ -185,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-japan",
+   "id": "hairy-lincoln",
    "metadata": {},
    "source": [
     "### Run and evaluate model on the data"
@@ -194,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "established-blood",
+   "id": "sixth-pulse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "considered-treasurer",
+   "id": "blank-information",
    "metadata": {},
    "outputs": [
     {
@@ -222,16 +254,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latter-element",
+   "id": "speaking-serbia",
    "metadata": {},
    "source": [
-    "### Investigating the misclassifications"
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "obvious-preliminary",
+   "metadata": {},
+   "source": [
+    "## Investigating the misclassifications"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fifth-beach",
+   "id": "pleased-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "enormous-savings",
+   "id": "authorized-wrong",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "weighted-solution",
+   "id": "tough-going",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acknowledged-baker",
+   "id": "collectible-graham",
    "metadata": {},
    "outputs": [],
    "source": []
