Add momentum to class

--- a/train.ipynb
+++ b/train.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "sacred-method",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "three-record",
    "metadata": {},
    "source": [
     "# Read data"
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "nuclear-utility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "thrown-wound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "straight-insurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "after-honey",
    "metadata": {},
    "source": [
     "## Test training"
@@ -56,23 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "compatible-nylon",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = NeuralNetwork(layers=[784, 400, 200, 10])\n",
+    "nn = NeuralNetwork(layers=[784, 400, 200, 10], momentum=0.9)\n",
     "#nn = NeuralNetwork(layers=[784, 2500, 2000, 1500, 1000, 500, 10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "id": "union-playing",
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
-    "def train(X_train, y_train, X_val, y_val, epochs, batch_size, momentum=0.9):\n",
+    "def train(X_train, y_train, X_val, y_val, epochs, batch_size):\n",
     "    \"\"\"Training loop.\"\"\"\n",
     "     \n",
     "    accuracy_train = []\n",
@@ -83,7 +91,7 @@
     "        # Iterate over minibatches (backward includes both forward and backward step).\n",
     "        for batch in iterate_minibatches(X_train, y_train, batch_size):\n",
     "            x_batch, y_batch = batch\n",
-    "            nn.backward(x_batch, y_batch, momentum=momentum)\n",
+    "            nn.backward(x_batch, y_batch)\n",
     "\n",
     "        # Train accuracy.\n",
     "        yhat_train, _, _ = nn.forward(X_train)\n",
@@ -102,17 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "valid-sapphire",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                       \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 200\n",
     "batch_size = 200\n",
@@ -123,6 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "tight-ceramic",
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "express-chocolate",
    "metadata": {},
    "source": [
     "## Dump network to file"
@@ -156,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "considerable-multimedia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +168,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "established-enzyme",
    "metadata": {},
    "source": [
     "## Test dumped network works"
@@ -172,6 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ready-communist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "continuous-cooking",
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "improving-context",
    "metadata": {},
    "outputs": [],
    "source": []
