--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "breathing-guatemala",
+   "id": "listed-round",
    "metadata": {},
    "source": [
     "# MNIST classification"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-software",
+   "id": "peaceful-hunter",
    "metadata": {},
    "source": [
     "**Course:** 02506 Advanced Image Analysis Spring 21\n",
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "comic-seattle",
+   "execution_count": 1,
+   "id": "varied-swift",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-immunology",
+   "id": "lasting-approach",
    "metadata": {},
    "source": [
     "***"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seasonal-robert",
+   "id": "passive-alignment",
    "metadata": {},
    "source": [
     "## Explanation of project\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-hygiene",
+   "id": "present-hacker",
    "metadata": {},
    "source": [
     "### Code structure"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-inflation",
+   "id": "mobile-heath",
    "metadata": {},
    "source": [
     "The only used 3rd party libraries are NumPy and Matplotlib.\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-elizabeth",
+   "id": "marked-twelve",
    "metadata": {},
    "source": [
     "### Pre-processing"
@@ -85,21 +85,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-headset",
+   "id": "manufactured-interest",
    "metadata": {},
    "source": [
     "We use data augmentation in order to expand the training set and add diversity. We expect that this will increase the model's ability to generalize. \n",
     "\n",
     "For data augmentation we use\n",
-    "- Additive noise.\n",
-    "- Rotation.\n",
-    "- Mirroring (only of 0 and 8).\n",
+    "- Additive (Gaussian) noise.\n",
+    "- Rotation between -25 and 25 degrees.\n",
+    "- Mirroring and 180 degrees rotation (only of 0 and 8).\n",
     "- Elastic deformation."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-zealand",
+   "id": "intimate-recognition",
    "metadata": {},
    "source": [
     "### Model selection"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-wichita",
+   "id": "christian-amendment",
    "metadata": {},
    "source": [
     "The data set is split into a training set of 48000 images and a validation set of 12000 images. The best model is selected as the model performing best on the test set.\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-marathon",
+   "id": "distributed-initial",
    "metadata": {},
    "source": [
     "| Architecture | Hyper params | Augmentation | Validation set accuracy |\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colored-stage",
+   "id": "affiliated-charles",
    "metadata": {},
    "source": [
     "***"
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expired-delaware",
+   "id": "ranging-smile",
    "metadata": {},
    "source": [
     "## Evaluating on unseen data"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "light-briefing",
+   "id": "worth-frost",
    "metadata": {},
    "source": [
     "### Load data and neural network model"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concrete-syria",
+   "id": "inner-better",
    "metadata": {},
    "source": [
     "Specify paths to the data below. By default these are set to the 10k test images."
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "experimental-creek",
+   "id": "leading-mattress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "charitable-raleigh",
+   "id": "criminal-limitation",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "quiet-trash",
+   "id": "right-happiness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-senegal",
+   "id": "blocked-binding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-adapter",
+   "id": "removable-recovery",
    "metadata": {},
    "source": [
     "### Run and evaluate model on the data"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "protective-secretary",
+   "id": "hollywood-police",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "minute-reset",
+   "id": "immediate-leadership",
    "metadata": {},
    "outputs": [
     {
@@ -249,12 +249,12 @@
     }
    ],
    "source": [
-    "print(f\"The classification error is {np.mean(pred_labels==labels)}.\")"
+    "print(f\"The classification accuracy is {np.mean(pred_labels==labels)}.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-pointer",
+   "id": "passive-proportion",
    "metadata": {},
    "source": [
     "***"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-bahamas",
+   "id": "actual-birmingham",
    "metadata": {},
    "source": [
     "## Investigating the misclassifications"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "processed-device",
+   "id": "unusual-egyptian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "rental-conditions",
+   "id": "dominant-maintenance",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fundamental-commissioner",
+   "id": "decimal-laugh",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
