--- a/train.ipynb
+++ b/train.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "physical-uganda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "hearing-albania",
    "metadata": {},
    "source": [
     "# Read data"
@@ -25,6 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "spectacular-photograph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "developing-rainbow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "formal-narrow",
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "limited-format",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "genuine-startup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "human-tract",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,24 +108,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "capable-kingdom",
    "metadata": {},
    "source": [
-    "## Test training"
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "focal-roman",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = NeuralNetwork(layers=[784, 400, 200, 10])\n",
-    "#nn = NeuralNetwork(layers=[784, 2500, 2000, 1500, 1000, 500, 10])"
+    "nn = NeuralNetwork(layers=[784, 400, 200, 10], momentum=0.9)\n",
+    "#nn = NeuralNetwork(layers=[784, 2500, 2000, 1500, 1000, 500, 10], momentum=0.9))\n",
+    "#nn = NeuralNetwork(layers=[784, 10], momentum=0.9))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "lesser-founder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "oriental-waterproof",
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "amino-applicant",
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "automotive-annotation",
    "metadata": {},
    "source": [
     "## Dump network to file"
@@ -207,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "insured-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "wooden-catch",
    "metadata": {},
    "source": [
     "## Test dumped network works"
@@ -223,6 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "tight-relaxation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "overhead-security",
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "sensitive-concentrate",
    "metadata": {},
    "outputs": [],
    "source": []
