--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "interpreted-stylus",
+   "id": "sharp-heavy",
    "metadata": {},
    "source": [
     "# MNIST classification"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-unemployment",
+   "id": "descending-being",
    "metadata": {},
    "source": [
     "**Course:** 02506 Advanced Image Analysis Spring 21\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-handy",
+   "id": "negative-sierra",
    "metadata": {},
    "source": [
     "***"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-treasury",
+   "id": "decreased-recall",
    "metadata": {},
    "source": [
     "## Explanation of project\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loaded-smoke",
+   "id": "nutritional-adrian",
    "metadata": {},
    "source": [
     "### Code structure"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-weekly",
+   "id": "widespread-dragon",
    "metadata": {},
    "source": [
     "The Neural Network structure and augmentation is based only on NumPy.\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olive-governor",
+   "id": "cheap-latest",
    "metadata": {},
    "source": [
     "### Augmentation"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demonstrated-arbor",
+   "id": "auburn-plain",
    "metadata": {},
    "source": [
     "We use data augmentation in order to expand the training set and add diversity. We expect that this will increase the model's ability to generalize. \n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "corresponding-finnish",
+   "id": "nervous-adobe",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "north-pitch",
+   "id": "contrary-maria",
    "metadata": {},
    "source": [
     "### Preprocessing"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-bernard",
+   "id": "quiet-disaster",
    "metadata": {},
    "source": [
     "We tested out deskewing. We tried with and without deskewing and it turned out to improve the results quite a lot when using deskewing. Deskewing is basically an affine transformation where the image is offset by the center of mass of the image and the covariance matrix of the image is used to estimate the skew."
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selective-asbestos",
+   "id": "confused-figure",
    "metadata": {},
    "source": [
     "### Hyperparameters"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-helmet",
+   "id": "cardiac-bottom",
    "metadata": {},
    "source": [
     "We implemented momentum in the neural network as a way of adapting the weight updates to hopefully increase learning speed and avoid local minima. We varied the momentum between 0.0 and 0.9. The learning rate was kept fixed at 0.001. We also tested out different Neural Network architectures. Furthermore, we used augmentation and deskewing as a hyperparameter (i.e. whether to use it or not). The number of epochs were fixed at 200 regardless of the architecture (we considered to implement early stopping, but did not have the time). To train the model we used mini-batch gradient descent with a fixed batch size of 200. "
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-pointer",
+   "id": "aware-warehouse",
    "metadata": {},
    "source": [
     "### Model selection"
@@ -165,12 +165,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-blanket",
+   "id": "adverse-oklahoma",
    "metadata": {},
    "source": [
     "The experiments were run on the HPC cluster on a Intel(R) Xeon(R) Gold 6126 CPU @ 2.60GHz.\n",
     "\n",
-    "The data set was split into a training set of 48000 images and a validation set of 12000 images. The best model is selected as the model performing best on the validation set.\n",
+    "The data set was split into a training set of 48000 images and a validation set of 12000 images (when using data augmentation the training set is doubled to 96000 images). The best model is selected as the model performing best on the validation set.\n",
     "\n",
     "The best performing model on the validation set is retrained on the entire dataset of 60000 images.\n",
     "\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optimum-casino",
+   "id": "virtual-function",
    "metadata": {},
    "source": [
     "| Architecture | Hyper params | Augmentation | Preprocessing | Validation set accuracy |\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minor-destiny",
+   "id": "sized-profession",
    "metadata": {},
    "source": [
     "***"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-store",
+   "id": "impressive-values",
    "metadata": {},
    "source": [
     "## Evaluating on unseen data"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-alignment",
+   "id": "specialized-maintenance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-gathering",
+   "id": "lasting-journalist",
    "metadata": {},
    "source": [
     "### Load data and neural network model"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cross-training",
+   "id": "wanted-census",
    "metadata": {},
    "source": [
     "Specify paths to the data below. By default these are set to the 10k test images."
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blessed-blake",
+   "id": "naval-clinic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlikely-promise",
+   "id": "nonprofit-lottery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "structured-talent",
+   "id": "transsexual-arlington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-usage",
+   "id": "enclosed-brook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-uganda",
+   "id": "prepared-texas",
    "metadata": {},
    "source": [
     "### Run and evaluate model on the data"
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "artistic-result",
+   "id": "subtle-tactics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "first-county",
+   "id": "internal-regular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "constitutional-ferry",
+   "id": "operating-mounting",
    "metadata": {},
    "source": [
     "***"
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "available-amber",
+   "id": "boxed-conjunction",
    "metadata": {},
    "source": [
     "## Investigating the misclassifications"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "differential-lambda",
+   "id": "valued-holly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premier-attack",
+   "id": "pacific-surface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-travel",
+   "id": "atomic-running",
    "metadata": {},
    "outputs": [],
    "source": [
